Credentials config + few small fixes

--- a/openapi_python_client/templates/security_schemes_base.py.jinja
+++ b/openapi_python_client/templates/security_schemes_base.py.jinja
@@ -2,7 +2,9 @@ from base64 import b64encode
 
 from typing import Literal, TypedDict, Dict, Any, Tuple, Protocol
 
-from dlt.common.configuration.specs.base_configuration import BaseConfiguration, configspec
+from dlt.common.configuration.specs.base_configuration import configspec
+from dlt.common.configuration.specs import CredentialsConfiguration
+from dlt.common.typing import TSecretStrValue
 
 
 class CredentialsHttpParams(TypedDict):
@@ -17,29 +19,29 @@ class APICredentials(Protocol):
 
 
 @configspec
-class _ApiKeyCredentialsBase(BaseConfiguration):
+class _ApiKeyCredentialsBase(CredentialsConfiguration):
     type: Literal["apiKey"] = "apiKey"
     location: Literal["header", "cookie", "param"]  # Alias for scheme "in" field
     name: str
-    api_key: str
+    api_key: TSecretStrValue
 
     def to_http_params(self) -> CredentialsHttpParams:
         result: CredentialsHttpParams = dict(cookies={}, headers={}, params={})
         result[self.location + "s"][self.name] = self.api_key  # type: ignore
         return result
 
-    def parse_native_representation(self, native_value: str) -> None:
+    def parse_native_representation(self, native_value: Any) -> None:
         if not isinstance(native_value, str):
             raise ValueError("Api Key value must be a string")
-        self.api_key = native_value
+        self.api_key = native_value  # type: ignore[assignment]
 
 
 @configspec
-class _HttpBasicCredentialsBase(BaseConfiguration):
+class _HttpBasicCredentialsBase(CredentialsConfiguration):
     type: Literal["http"] = "http"
     scheme: Literal["basic"] = "basic"
     username: str
-    password: str
+    password: TSecretStrValue
 
     def to_http_params(self) -> CredentialsHttpParams:
         encoded = b64encode(f"{self.username}:{self.password}".encode()).decode()
@@ -49,14 +51,14 @@ class _HttpBasicCredentialsBase(BaseConfiguration):
         username, password = native_value
         if not isinstance(username, str) or not isinstance(password, str):
             raise ValueError("Value must be a tuple of ('username', 'password')")
-        self.username, self.password = username, password
+        self.username, self.password = username, password  # type: ignore[assignment]
 
 
 @configspec
-class _HttpBearerCredentialsBase(BaseConfiguration):
+class _HttpBearerCredentialsBase(CredentialsConfiguration):
     type: Literal["http"] = "http"
     scheme: Literal["bearer"] = "bearer"
-    token: str
+    token: TSecretStrValue
 
     def to_http_params(self) -> CredentialsHttpParams:
         return dict(cookies={}, headers={"Authorization": "Bearer " + self.token}, params={})
@@ -64,14 +66,14 @@ class _HttpBearerCredentialsBase(BaseConfiguration):
     def parse_native_representation(self, native_value: str) -> None:
         if not isinstance(native_value, str):
             raise ValueError("Http bearer value must be a string")
-        self.token = native_value
+        self.token = native_value  # type: ignore[assignment]
 
 
 @configspec
-class _OAuth2CredentialsBase(BaseConfiguration):
+class _OAuth2CredentialsBase(CredentialsConfiguration):
     # TODO: Separate class for flows (implcit, authorization_code, client_credentials, etc)
     type: Literal["oauth2"] = "oauth2"
-    access_token: str
+    access_token: TSecretStrValue
 
     def to_http_params(self) -> CredentialsHttpParams:
         return dict(cookies={}, headers={"Authorization": "Bearer " + self.access_token}, params={})
@@ -79,4 +81,4 @@ class _OAuth2CredentialsBase(BaseConfiguration):
     def parse_native_representation(self, native_value: str) -> None:
         if not isinstance(native_value, str):
             raise ValueError("OAuth2 access token value must be a string")
-        self.access_token = native_value
+        self.access_token = native_value  # type: ignore[assignment]
