--- a/openapi_python_client/templates/utils.py.jinja
+++ b/openapi_python_client/templates/utils.py.jinja
@@ -25,32 +25,36 @@ def extract_url_like_values(data: Dict[str, Any]) -> Iterator[str]:
             yield value
 
 
-def extract_iterate_parent(
-    data: TDataItems, property_path: TJsonPath, path_param_name: str, endpoint_url: str
-) -> Iterator[Any]:
+def extract_iterate_parent(data: TDataItems, path_parameters: Dict[str, TJsonPath], endpoint_url: str) -> Iterator[Any]:
     """Extract kwargs to use in transformer requests"""
     if not isinstance(data, list):
         data = [data]
     for item in data:
-        property_values = find_values(property_path, item)
-        if property_values:
-            yield {path_param_name: property_values[0]}
+        result = {}
+        for path_param_name, property_path in path_parameters.items():
+            property_values = find_values(property_path, item)
+            if property_values:
+                result[path_param_name] = property_values[0]
+
+        if result:
+            yield result
             continue
 
         # Try looking for a URL property which matches the endpoint URL we're dealing with
         urls = extract_url_like_values(item)
-        property_value: Optional[str] = None
+        property_values = {}
         for url in urls:
-            property_value = pluck_param_from_result_url(url, endpoint_url)
-            if not property_value:
-                continue
-            else:
-                break
+            for path_param_name in path_parameters.keys():
+                property_value = pluck_param_from_result_url(url, endpoint_url)
+                if property_value is not None:
+                    property_values[path_param_name] = property_value
+                    break
 
-        if property_value is not None:
-            yield {path_param_name: property_value}
+        # Has all keys
+        if len(property_values) == len(path_parameters):
+            yield property_values
         else:
-            raise ValueError(f"Could not find id parameter {path_param_name} (endpoint {endpoint_url}) in: {item}")
+            raise ValueError(f"Could not find id parameters {path_parameters} (endpoint {endpoint_url}) in: {item}")
 
 
 def pluck_param_from_result_url(result_url: str, endpoint_url: str) -> Optional[str]:
