Remove bundled rest client

--- a/openapi_python_client/templates/pyproject.toml.jinja
+++ b/openapi_python_client/templates/pyproject.toml.jinja
@@ -14,7 +14,7 @@ include = ["CHANGELOG.md", "{{ package_name }}/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-dlt = "^0.2.6"
+dlt = {git = "https://github.com/dlt-hub/dlt.git", rev = "b8fb7fd2"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
