--- a/openapi_python_client/templates/endpoint_macros.py.jinja
+++ b/openapi_python_client/templates/endpoint_macros.py.jinja
@@ -89,7 +89,7 @@ credentials: {{ endpoint.credentials.type_hint }} = dlt.secrets.value,
 data_json_path: Optional[str]="{{endpoint.data_json_path}}",
 {% if endpoint.transformer %}
 {# Render the dict of path params #}
-path_parameter_paths={{ endpoint.transformer.path_params_mapping }}
+path_parameter_paths: Dict[str, TJsonPath]={{ endpoint.transformer.path_params_mapping }}
 {% endif %}
 {% endmacro %}
 
