Schema name from component ref only, update dlt, cleanup

--- a/openapi_python_client/templates/pyproject.toml.jinja
+++ b/openapi_python_client/templates/pyproject.toml.jinja
@@ -14,7 +14,7 @@ include = ["CHANGELOG.md", "{{ package_name }}/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-dlt = {git = "https://github.com/dlt-hub/dlt.git", branch = "sthor/remove-rest-client-cyclic-import"}
+dlt = {extras = ["duckdb"], version = "^0.4.8"}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
