--- a/openapi_python_client/templates/api_helpers.py.jinja
+++ b/openapi_python_client/templates/api_helpers.py.jinja
@@ -3,7 +3,7 @@ from typing import Dict, TypedDict, Any, List, Optional
 
 from dlt.common import json
 
-from .types import UNSET
+from .pipeline_types import UNSET
 
 
 class ParamInfo(TypedDict):
