--- a/openapi_python_client/templates/endpoint_module.py.jinja
+++ b/openapi_python_client/templates/endpoint_module.py.jinja
@@ -5,7 +5,7 @@ from typing import Any, Dict, List, Optional, Union, cast, Iterator
 from dlt.sources.helpers import requests
 from dlt.sources.helpers.rest_client.paginators import JSONResponseCursorPaginator, OffsetPaginator
 
-from .types import UNSET, Unset
+from .pipeline_types import UNSET, Unset
 from .utils import extract_nested_data, extract_iterate_parent
 from .api_helpers import build_query_parameters, build_formatted_url, TParameterMap
 
