--- a/openapi_python_client/templates_old/pipeline.py.jinja
+++ b/openapi_python_client/templates_old/pipeline.py.jinja
@@ -11,5 +11,6 @@ if __name__ == "__main__":
         full_refresh=False,
         export_schema_path="schemas/export"
     )
-    info = pipeline.run({{ source_name }})
+    source = {{ source_name }}()
+    info = pipeline.run(source)
     print(info)
