--- a/openapi_python_client/templates/pipeline.py.jinja
+++ b/openapi_python_client/templates/pipeline.py.jinja
@@ -11,5 +11,5 @@ if __name__ == "__main__":
         full_refresh=False,
         export_schema_path="schemas/export"
     )
-    info = pipeline.run({{ source_name }})
+    info = pipeline.run({{ source_name }}())
     print(info)
