--- a/openapi_python_client/templates/source.py.jinja
+++ b/openapi_python_client/templates/source.py.jinja
@@ -1,18 +1,30 @@
+from typing import List
+
 import dlt
+from dlt.extract.source import DltResource
 
 from rest_api.typing import RESTAPIConfig
-
 from rest_api import rest_api_source
 
-source_config: RESTAPIConfig = {
-    "client": {
-        "base_url": dlt.config["base_url"],
-    },
-    "resources": [
-    {% for endpoint in endpoint_collection.all_endpoints_to_render %}
-        "{{ endpoint.path }}",
-    {% endfor %}
-    ]
-}
+@dlt.source(name="{{source_name}}", max_table_nesting=2)
+def {{ source_name }}(
+        {% if credentials %}
+        credentials: {{ credentials.type_hint }} = dlt.secrets.value,
+        {% endif %}
+        base_url: str = dlt.config.value,
+) -> List[DltResource]:
 
-{{ source_name }} = rest_api_source(source_config)
+    # source configuration
+    source_config: RESTAPIConfig = {
+        "client": {
+            "base_url": base_url,
+        },
+        "resources": [
+        {% for endpoint in endpoint_collection.all_endpoints_to_render %}
+            "{{ endpoint.path }}",
+        {% endfor %}
+        ]
+    }
+
+    return rest_api_source(source_config)
+
