fix offset paginator

--- a/openapi_python_client/templates/source.py.jinja
+++ b/openapi_python_client/templates/source.py.jinja
@@ -42,7 +42,12 @@ def {{ source_name }}(
                 {% if endpoint.pagination_args %}
                 "paginator": {
                     {% for key, value in endpoint.pagination_args.items() %}
-                    "{{key}}": "{{value}}",
+                    "{{key}}":
+                        {% if value is integer %}
+                        {{value}},
+                        {% else %}
+                        "{{value}}",
+                        {% endif %}
                     {% endfor %}
                 },
                 {% endif %}
