--- a/openapi_python_client/templates/source.py.jinja
+++ b/openapi_python_client/templates/source.py.jinja
@@ -6,10 +6,11 @@ from dlt.extract.source import DltResource
 from rest_api.typing import RESTAPIConfig
 from rest_api import rest_api_source
 
+
 @dlt.source(name="{{source_name}}", max_table_nesting=2)
 def {{ source_name }}(
         {% if credentials %}
-        credentials: {{ credentials.type_hint }} = dlt.secrets.value,
+        {{ credentials.credentials_string }},
         {% endif %}
         base_url: str = dlt.config.value,
 ) -> List[DltResource]:
@@ -18,6 +19,9 @@ def {{ source_name }}(
     source_config: RESTAPIConfig = {
         "client": {
             "base_url": base_url,
+            {% if credentials %}
+            "auth": {{ credentials.auth_statement }},
+            {% endif %}
         },
         "resources": 
         [
@@ -30,7 +34,7 @@ def {{ source_name }}(
                 "path": "{{endpoint.path }}",
                 {% if endpoint.transformer %}
                 "params": {
-                    {% for key, value in endpoint.transformer.path_params_mapping.items() %}
+                    {% for key, value in endpoint.transformer.path_params_mapping_first_item.items() %}
                     "{{key}}": {
                         "type": "resolve",
                         "resource": "{{endpoint.parent.python_name }}",
