--- a/openapi_python_client/templates/source.py.jinja
+++ b/openapi_python_client/templates/source.py.jinja
@@ -29,6 +29,9 @@ def {{ source_name }}(
         {% for endpoint in endpoint_collection.all_endpoints_to_render %}
         {
             "name": "{{ endpoint.python_name }}",
+            {% if endpoint.primary_key %}
+            "primary_key": "{{ endpoint.primary_key }}",
+            {% endif %}
             "endpoint": {
                 "data_selector": "{{ endpoint.data_json_path }}",
                 "path": "{{endpoint.path }}",
