move transformer settings detection into detector

--- a/openapi_python_client/templates/source.py.jinja
+++ b/openapi_python_client/templates/source.py.jinja
@@ -36,7 +36,7 @@ def {{ source_name }}(
                 "path": "{{endpoint.path }}",
                 {% if endpoint.transformer %}
                 "params": {
-                    {% for key, value in endpoint.transformer.path_params_mapping_first_item.items()%}
+                    {% for key, value in endpoint.transformer.path_params_mapping.items()%}
                     "{{key}}": {
                         "type": "resolve",
                         "resource": "{{endpoint.parent.operation_id }}",
