add correct endpoint deselection for dependent parent resources

--- a/openapi_python_client/templates/source.py.j2
+++ b/openapi_python_client/templates/source.py.j2
@@ -30,6 +30,9 @@ def {{ source_name }}(
             "name": "{{ endpoint.detected_resource_name }}",
             {% if endpoint.primary_key %}
             "primary_key": "{{ endpoint.primary_key }}",
+            {% if endpoint.detected_resource_name in endpoint_collection.names_to_deselect %}
+            "selected": False,
+            {% endif %}
             {% endif %}
             "endpoint": {
                 "data_selector": "{{ endpoint.data_json_path }}",
