Remove template redundant closing tag in template interpolation

--- a/dlt_openapi/renderer/default/templates/README.md.j2
+++ b/dlt_openapi/renderer/default/templates/README.md.j2
@@ -11,4 +11,4 @@ Created with [dlt-openapi](https://github.com/dlt-hub/dlt-openapi) v. {{version}
 * {{ endpoint.detected_resource_name }}  
   _{{endpoint.method}} {{ endpoint.path }}_  
   {% if endpoint.description %}{{endpoint.description}}{% endif %}
-{% endfor %}%}
+{% endfor %}
